# IPES4

./: .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  backup.json  backup_docentes.json  backup_pre_drop.json  check_horarioclase_table.py  check_planestudios.py  collisions.txt  conftest.py  generate_espacios_creation_script.py  get_plan_data.py  load_correlatividades_db.py  manage.py  output.txt  parse_correlatividades.py  parsed_correlatividades.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  schema_erd.mmd  schema_models.md  tasks.ps1
.github/: dependabot.yml
academia_core/: admin.py  apps.py  auth_mixins.py  auth_utils.py  context_processors.py  correlativas.py  eligibilidad.py  forms.py  forms_admin.py  forms_carga.py  forms_correlativas.py  forms_espacios.py  forms_student.py  label_utils.py  models.bak  models.py  roles.py  signals.py  tests.py  urls.py  utils.py  utils_inscripciones.py  view_utils.py  views.py  views_api.py  views_auth.py  views_cbv.py  views_inscripciones.py  views_panel.py
academia_horarios/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
academia_project/: __init__.py  asgi.py  settings.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py  wsgi.py
datos/: espacios.csv  estudiantes.csv  profesorados.csv
docs/: SEGUIMIENTO.md
scripts/: _utils.py  alias_sugeridos.py  check_collisions.py  dedupe_planes.py  import_materias_espacios.py  importa_correlatividades.py  migrate_horarios.py
tests/: conftest.py  test_admin_login_smoke.py  (+28 more)
(+152 files in other folders)
