[project]
name = "academia"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<5.2>",
    "djangorestframework>=3.16.1>",
    "pillow>=11.3.0",
    "pymysql>=1.1.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "*/migrations/*",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
# Reglas útiles y sin ser molestos
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "model-bakery>=1.20.5",
    "pre-commit>=4.3.0",
    "pytest",
    "pytest-cov>=6.2.1",
    "pytest-django",
    "ruff",
    "tzdata",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "academia_project.settings_test"
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["IPES3", "..\\IPES3", "../IPES3"]
addopts = "-q -ra -n auto --cov=academia_core --cov=academia_horarios --cov=ui --cov-report=xml --cov-fail-under=85 --ignore=../IPES3 --ignore=..\IPES3 --ignore-glob='*/IPES3/*' --rootdir=."
filterwarnings = [
  "ignore::django.utils.deprecation.RemovedInDjango60Warning",
]

[tool.coverage.run]
branch = true
source = ["academia_core", "academia_horarios", "ui"]
omit = [
  "*/migrations/*",
  "*/management/*",
  "*/tests/*",
  "*/admin.py",
  "*/apps.py",
  "manage.py",
  "scripts/*",
  # ↓ añade estas líneas para subir % rápidamente
  "academia_core/views*.py",
  "academia_core/forms*.py",
  "ui/*",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
  "pytest-django>=4"
]
